# Lacrei_Api

./: .gitignore  README.md  medico.json  pyproject.toml
consultas/: models.py  serializers.py  urls.py  views.py
consultas/migrations/: 0001_initial.py  0002_medico_paciente.py  0003_alter_consulta_medico_alter_consulta_paciente.py
lacrei/: asgi.py  settings.py  urls.py  wsgi.py
lacrei/templates/: home.html
